attempting to fix contrast errors

--- a/Index/styles/index.css
+++ b/Index/styles/index.css
@@ -18,7 +18,7 @@ footer {
 .top-bit {
     border-radius: 20px;
     display: flex;
-    background-color:  rgb(80, 167, 196);
+    background-color:  rgb(31, 33, 119);
     
     height: 30%;
     box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
@@ -45,7 +45,7 @@ footer {
 }
 
 .bottom-bit {
-    background-color: rgb(80, 167, 196);
+    background-color: rgb(31, 33, 119);
     text-align: center;
     border-radius: 20px;
     box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
